# write_ai_agent

./: .gitignore  CLAUDE.md  LICENSE  README.md  active_characters.yaml  agent_loop.py  autoresearch-results.tsv  chapter_generator.py  character_agent.py  character_manager.py  character_memory.yaml  character_memory_agent.py  context_builder_agent.py  expansion_agent.py  goal_planner_agent.py  main.py  main_character.yaml  main_character_agent.py  main_goal.yaml  novel_agent.py  novel_config.yaml  objectives.yaml  objectives_corrected.yaml  objectives_expanded.yaml  plot_planner_agent.py  pyproject.toml  requirements.txt  timeline.md  timeline_generator.py  volume_main.py  write.ipynb  小說AI_Agent.ipynb
.claude/: ralph-loop.local.md  settings.json
.claude-plugin/: marketplace.json  plugin.json
.github/: BRANCHING_STRATEGY.md  pull_request_template.md
agents/: arc-reviewer.md  arc_planner.py  base_agent.py  chapter-writer.md  chapter_generator.py  chapter_planner.py  character_designer.py  consistency_checker.py  context_builder.py  enhanced_goal_planner.py  expansion_agent.py  foreshadowing_manager.py  goal_planner_agent.py  graph-updater.md  judge_agent.py  novel_assembler.py  pacing_advisor.py  progress-updater.md  rewrite_agent.py  story_bible_keeper.py  style_editor.py  summarizer.py  summarizer_agent.py  volume-planner.md  volume_architect.py  volume_architect_agent.py  world_builder.py
characters/: 瑞恩.yaml  艾莉亞.yaml  莉亞.yaml
common/: settings.py  utils.py
config/: __init__.py  models.py  settings.py
data/: active_story.txt
infrastructure/: db.py  (+3 more)
(+227 files in other folders)
