[project]
name = "write-ai-agent"
version = "2.0.0"
description = "AI-powered novel writing pipeline with multi-agent orchestration"
requires-python = ">=3.11"
dependencies = [
    # LLM
    "boto3>=1.34",
    "openai>=1.30",
    "anthropic>=0.30",
    "tiktoken>=0.7",
    # Agent framework
    "langgraph>=0.4",
    "langchain-core>=0.3",
    "langchain-openai>=0.3",
    "langchain-anthropic>=0.3",
    # Data & Storage
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyyaml>=6.0",
    "chromadb>=0.5",
    # CLI
    "typer>=0.12",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[tool.setuptools.packages.find]
include = ["config*", "agents*", "memory*", "pipeline*", "infrastructure*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
